environments/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: farm-dora-ingress
  namespace: farmdora-dev
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: farm-dora.kro.kr
      http:
        paths:
          - path: /api/(activity)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: farm-dora-activity-dev
                port:
                  number: 8010
          - path: /api/(buyer)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: farm-dora-buyer-dev
                port:
                  number: 8020
          - path: /api/(search)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: farm-dora-search-dev
                port:
                  number: 8030
          - path: /api/(auth)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: farm-dora-auth-dev
                port:
                  number: 8040
          - path: /api/(product)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: farm-dora-product-dev
                port:
                  number: 8050
          - path: /
            pathType: Prefix
            backend:
              service:
                name: farm-dora-client-dev
                port:
                  number: 80
